# geospatial-retail-site-selection

./: .databricksignore  .gitignore  README.md  databricks.yml
app/: app.yaml  pyproject.toml
app/backend/: config.py  main.py  models.py  router.py
app/backend/data/: agent.py  fetchers.py  gemini_chat.py  generators.py  genie_chat.py  sql_client.py  store.py
app/ui/: app.css  index.html  main.tsx  package-lock.json  package.json  routeTree.gen.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
app/ui/components/: welcome-dialog.tsx
app/ui/components/charts/: distribution-chart.tsx  feature-importance.tsx  mini-bar-chart.tsx  mini-line-chart.tsx
app/ui/components/maps/: map-layer-control.tsx  map-legend.tsx  network-map.tsx  playground-map.tsx  timeline-control.tsx
app/ui/components/shared/: agent-chat.tsx  chatbot.tsx  guided-tour.tsx  kpi-card.tsx  location-input.tsx  scenario-panel.tsx
app/ui/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  skeleton.tsx  slider.tsx  switch.tsx
app/ui/lib/: api.ts  formatters.ts
app/ui/routes/: __root.tsx  _sidebar.tsx
app/ui/routes/_sidebar/: data-exploration.tsx  data-validation.tsx  index.tsx  network-diagnostics.tsx  site-playground.tsx
docs/: design-doc.md
pipelines/: databricks.yml
pipelines/bronze/: census_boundaries.py  census_demographics.py  extract_pois.py  osm_download.py
pipelines/exploration/: generate_competitor_locations.py  generate_sales_data.py  generate_seed_points.py  generate_store_locations.py
pipelines/silver/: census_zcta.py  (+5 more)
resources/: site_selection_app.app.yml
(+20 files in other folders)
